--- a/src/add_two_numbers/Cargo.toml
+++ b/src/add_two_numbers/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "longest-no-repeat"
+name = "add_two_numbers"
 version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies.list_node]
+path = "../list_node"
 
 [dependencies]
