--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [workspace]
 members = [
-    "src/list_node",
-    "src/reverse_integer",
     "src/add_two_numbers",
+    "src/binary_search",
+    "src/list_node",
     "src/longest_no_repeat",
     "src/remove_nth_node",
+    "src/reverse_integer",
 ]
