--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "src/pairs_spells_potions",
     "src/remove_nth_node",
     "src/reverse_integer",
+    "src/reverse_linked_list",
     "src/two_sum",
     "src/valid_sudoku",
 ]
