Implementing Integer to Roman

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "src/add_two_numbers",
     "src/binary_search",
+    "src/integer-to-roman",
     "src/list_node",
     "src/longest_no_repeat",
     "src/merge-two-sorted-lists",
