--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "src/roman_to_integer",
     "src/rotate_image",
     "src/sliding_window_maximum",
+    "src/swap_nodes_in_pairs",
     "src/two_sum",
     "src/valid_sudoku",
 ]
