--- a/src/add_two_numbers_cpp/CMakeLists.txt
+++ b/src/add_two_numbers_cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 file(GLOB ADD_TWO_NUMBERS_FILES "src/*.h" "src/*.cc")
 add_library(add_two_numbers ${ADD_TWO_NUMBERS_FILES})
 
+target_compile_features(add_two_numbers PUBLIC cxx_std_20)
+
 file(GLOB TEST_FILES "tests/*.h" "tests/*.cc" "src/*.h" "src/*.cc")
 
 enable_testing()
