--- a/src/integer_to_roman_cpp/CMakeLists.txt
+++ b/src/integer_to_roman_cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 file(GLOB SOURCE_FILES "src/*.h" "src/*.cc")
 add_library(integer_to_roman ${SOURCE_FILES})
 
+target_compile_features(integer_to_roman PUBLIC cxx_std_20)
+
 file(GLOB TEST_FILES "tests/*.h" "tests/*.cc" "src/*.h" "src/*.cc")
 
 enable_testing()
