--- a/.github/workflows/build-cpp.yml
+++ b/.github/workflows/build-cpp.yml
@@ -22,7 +22,10 @@ jobs:
       PROJECT: leet-code
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Install compiler and packages
         shell: bash
         # Note the current convention is to use the -S and -B options here to specify source
