--- a/.github/workflows/build-rust.yml
+++ b/.github/workflows/build-rust.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@v1
         with:
