--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "extern/googletest"]
-	path = extern/googletest
+	path = externals/googletest
 	url = https://github.com/google/googletest.git
 	branch = v1.13.x
