Implementing reverse integer cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,47 +9,50 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("leet-code")
+project("leet-code")
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(PACKAGE_TESTS "Build the tests" ON)
 if(PACKAGE_TESTS)
-    enable_testing()
     include(GoogleTest)
+    add_subdirectory("${PROJECT_SOURCE_DIR}/externals/googletest" "externals/googletest")
+    mark_as_advanced(
+        BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
+        gmock_build_tests gtest_build_samples gtest_build_tests
+        gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
+    )
+    
+    set_target_properties(gtest PROPERTIES FOLDER extern)
+    set_target_properties(gtest_main PROPERTIES FOLDER extern)
+    set_target_properties(gmock PROPERTIES FOLDER extern)
+    set_target_properties(gmock_main PROPERTIES FOLDER extern)
 endif()
 
-add_subdirectory("${PROJECT_SOURCE_DIR}/externals/googletest" "externals/googletest")
-mark_as_advanced(
-    BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
-    gmock_build_tests gtest_build_samples gtest_build_tests
-    gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
-)
-
-set_target_properties(gtest PROPERTIES FOLDER extern)
-set_target_properties(gtest_main PROPERTIES FOLDER extern)
-set_target_properties(gmock PROPERTIES FOLDER extern)
-set_target_properties(gmock_main PROPERTIES FOLDER extern)
-
 macro(package_add_test TESTNAME)
-    # create an executable in which the tests will be stored
-    add_executable(${TESTNAME} ${ARGN})
-    # link the Google test infrastructure, mocking library, and a default main function to
-    # the test executable.  Remove g_test_main if writing your own main function.
-    target_link_libraries(${TESTNAME} gtest gmock gtest_main)
-    # gtest_discover_tests replaces gtest_add_tests,
-    # see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
-    gtest_discover_tests(${TESTNAME}
-        # set a working directory so your project root so that you can find test data via paths relative to the project root
-        WORKING_DIRECTORY ${PROJECT_DIR}
-        PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
-    )
-    set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
+    if(PACKAGE_TESTS)
+        # create an executable in which the tests will be stored
+        add_executable(${TESTNAME} ${ARGN})
+        # link the Google test infrastructure, mocking library, and a default main function to
+        # the test executable.  Remove g_test_main if writing your own main function.
+        target_link_libraries(${TESTNAME} gtest gmock gtest_main)
+        # gtest_discover_tests replaces gtest_add_tests,
+        # see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
+        gtest_discover_tests(${TESTNAME}
+            # set a working directory so your project root so that you can find test data via paths relative to the project root
+            WORKING_DIRECTORY ${PROJECT_DIR}
+            PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
+        )
+        set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
+    endif()
 endmacro()
 
-enable_testing()
+if(PACKAGE_TESTS)
+    enable_testing()
+endif()
 
-add_subdirectory ("src/add_two_numbers_cpp")
-add_subdirectory ("src/binary_search_cpp")
-add_subdirectory ("src/integer_to_roman_cpp")
-add_subdirectory ("src/longest_no_repeat_cpp")
+add_subdirectory("src/add_two_numbers_cpp")
+add_subdirectory("src/binary_search_cpp")
+add_subdirectory("src/integer_to_roman_cpp")
+add_subdirectory("src/longest_no_repeat_cpp")
+add_subdirectory("src/reverse_integer_cpp")
