--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,3 +56,4 @@ add_subdirectory("src/binary_search_cpp")
 add_subdirectory("src/integer_to_roman_cpp")
 add_subdirectory("src/longest_no_repeat_cpp")
 add_subdirectory("src/reverse_integer_cpp")
+add_subdirectory("src/roman_to_integer_cpp")
