--- a/.github/workflows/build-cpp.yml
+++ b/.github/workflows/build-cpp.yml
@@ -17,9 +17,13 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest]
     env:
       PROJECT: leet-code
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
@@ -28,23 +32,17 @@ jobs:
           submodules: recursive
       - name: Create CMake build files
         working-directory: ${{github.workspace}}
-        shell: bash
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         run: |
-          CXX_FLAGS="-Wall -Werror -Wno-variadic-macros -Wno-long-long -Wno-shadow"
-          export CMAKE_OPTIONS="${CMAKE_OPTIONS} ${ENV_CMAKE_OPTIONS}"
-          export CXX_FLAGS="${CXX_FLAGS} ${ENV_CXX_FLAGS}"
-          cmake -B build ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS}
+          cmake -B build
 
       - name: Compile the project
         working-directory: ${{github.workspace}}
-        shell: bash
         run: |
-          VERBOSE=1 cmake --build build --config $BUILD_TYPE -j8
+          cmake --build build --config $BUILD_TYPE -j8
 
       - name: Run the tests
         working-directory: ${{github.workspace}}/build
-        shell: bash
         run: |
           ctest
