--- a/.github/workflows/build-cpp.yml
+++ b/.github/workflows/build-cpp.yml
@@ -11,18 +11,12 @@ on:
       - main
       - release/*
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
-
 jobs:
   build:
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-    env:
-      PROJECT: leet-code
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -40,7 +34,7 @@ jobs:
       - name: Compile the project
         working-directory: ${{github.workspace}}
         run: |
-          cmake --build build --config $BUILD_TYPE -j8
+          cmake --build build --config Debug -j8
 
       - name: Run the tests
         working-directory: ${{github.workspace}}/build
