--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ add_subdirectory("src/letter_combinations_numbers_cpp")
 add_subdirectory("src/longest_no_repeat_cpp")
 add_subdirectory("src/reverse_integer_cpp")
 add_subdirectory("src/roman_to_integer_cpp")
+add_subdirectory("src/valid_parentheses_cpp")
