--- a/src/valid_parentheses_cpp/CMakeLists.txt
+++ b/src/valid_parentheses_cpp/CMakeLists.txt
@@ -1,11 +1,11 @@
-file(GLOB LETTER_COMBINATIONS_NUMBERS_FILES "src/*.h" "src/*.cc")
-add_library(letter_combinations_numbers ${LETTER_COMBINATIONS_NUMBERS_FILES})
+file(GLOB VALID_PARENTHESES_FILES "src/*.h" "src/*.cc")
+add_library(valid_parentheses ${VALID_PARENTHESES_FILES})
 
-target_compile_features(letter_combinations_numbers PUBLIC cxx_std_23)
+target_compile_features(valid_parentheses PUBLIC cxx_std_23)
 
 file(GLOB TEST_FILES "tests/*.h" "tests/*.cc" "src/*.h" "src/*.cc")
 
 package_add_test(
-  letter_combinations_numbers_tests
+  valid_parentheses_tests
   ${TEST_FILES}
 )
