Implementing Remove Nth Node c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ add_subdirectory("src/binary_search_cpp")
 add_subdirectory("src/integer_to_roman_cpp")
 add_subdirectory("src/letter_combinations_numbers_cpp")
 add_subdirectory("src/longest_no_repeat_cpp")
+add_subdirectory("src/remove_nth_node_cpp")
 add_subdirectory("src/reverse_integer_cpp")
 add_subdirectory("src/roman_to_integer_cpp")
 add_subdirectory("src/valid_parentheses_cpp")
