--- a/src/reverse_integer_cpp/CMakeLists.txt
+++ b/src/reverse_integer_cpp/CMakeLists.txt
@@ -1,11 +1,12 @@
-file(GLOB REVERSE_INTEGER_SOURCE "src/*.h" "src/*.cc")
-add_library(reverse_integer ${REVERSE_INTEGER_SOURCE})
-
+list(APPEND SOURCE_FILES "src/Solution.cc")
+add_library(reverse_integer ${SOURCE_FILES})
+include_directories(${LIST_NODE_INCLUDE})
 target_compile_features(reverse_integer PUBLIC cxx_std_23)
 
-file(GLOB TEST_FILES "tests/*.h" "tests/*.cc" "src/*.h" "src/*.cc")
+list(APPEND TEST_FILES "tests/lib_tests.cc")
 
 package_add_test(
   reverse_integer_tests
   ${TEST_FILES}
+  ${SOURCE_FILES}
 )
