--- a/src/valid_sudoku_cpp/CMakeLists.txt
+++ b/src/valid_sudoku_cpp/CMakeLists.txt
@@ -1,11 +1,12 @@
-file(GLOB VALID_SUDOKU_FILES "src/*.h" "src/*.cc")
-add_library(valid_sudoku ${VALID_SUDOKU_FILES})
-
+list(APPEND SOURCE_FILES "src/Solution.cc")
+add_library(valid_sudoku ${SOURCE_FILES})
+include_directories(${LIST_NODE_INCLUDE})
 target_compile_features(valid_sudoku PUBLIC cxx_std_23)
 
-file(GLOB TEST_FILES "tests/*.h" "tests/*.cc" "src/*.h" "src/*.cc")
+list(APPEND TEST_FILES "tests/lib_tests.cc")
 
 package_add_test(
   valid_sudoku_tests
   ${TEST_FILES}
+  ${SOURCE_FILES}
 )
