--- a/src/list_node_cpp/CMakeLists.txt
+++ b/src/list_node_cpp/CMakeLists.txt
@@ -1,1 +1,5 @@
-set(LIST_NODE_INCLUDE "${PROJECT_SOURCE_DIR}/src/list_node_cpp/src" CACHE INTERNAL PARENT_SCOPE)
+set(LIST_NODE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/src" CACHE INTERNAL PARENT_SCOPE)
+add_library(list_node INTERFACE)
+target_sources(list_node INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/src/ListNode.h")
+
+target_include_directories(list_node INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/src")
