--- a/src/longest_no_repeat_cpp/CMakeLists.txt
+++ b/src/longest_no_repeat_cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 list(APPEND SOURCE_FILES "src/Solution.cc")
+list(APPEND ADD_TWO_NUMBERS_FILES "src/Solution.h")
 add_library(longest_no_repeat ${SOURCE_FILES})
 include_directories(${LIST_NODE_INCLUDE})
+target_link_libraries(longest_no_repeat list_node)
 target_compile_features(longest_no_repeat PUBLIC cxx_std_23)
 
 list(APPEND TEST_FILES "tests/solution_tests.cc")
