--- a/src/remove_nth_node_cpp/CMakeLists.txt
+++ b/src/remove_nth_node_cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 list(APPEND SOURCE_FILES "src/Solution.cc")
+list(APPEND SOURCE_FILES "src/Solution.h")
 add_library(remove_nth_node ${SOURCE_FILES})
 include_directories(${LIST_NODE_INCLUDE})
+target_link_libraries(remove_nth_node list_node)
 target_compile_features(remove_nth_node PUBLIC cxx_std_23)
 
 list(APPEND TEST_FILES "tests/lib_tests.cc")
