--- a/src/binary_search_cpp/CMakeLists.txt
+++ b/src/binary_search_cpp/CMakeLists.txt
@@ -1,4 +1,5 @@
 list(APPEND SOURCE_FILES "src/Solution.cc")
+list(APPEND ADD_TWO_NUMBERS_FILES "src/Solution.h")
 add_library(binary_search ${SOURCE_FILES})
 include_directories(${LIST_NODE_INCLUDE})
 target_compile_features(binary_search PUBLIC cxx_std_23)
