--- a/src/valid_parentheses_cpp/CMakeLists.txt
+++ b/src/valid_parentheses_cpp/CMakeLists.txt
@@ -1,4 +1,5 @@
 list(APPEND SOURCE_FILES "src/Solution.cc")
+list(APPEND SOURCE_FILES "src/Solution.h")
 add_library(valid_parentheses ${SOURCE_FILES})
 include_directories(${LIST_NODE_INCLUDE})
 target_compile_features(valid_parentheses PUBLIC cxx_std_23)
