--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,5 +63,6 @@ add_subdirectory("src/remove_nth_node_cpp")
 add_subdirectory("src/reverse_integer_cpp")
 add_subdirectory("src/reverse_linked_list_cpp")
 add_subdirectory("src/roman_to_integer_cpp")
+add_subdirectory("src/two_sum_cpp")
 add_subdirectory("src/valid_parentheses_cpp")
 add_subdirectory("src/valid_sudoku_cpp")
