Implement find the duplicate number c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ endif()
 add_subdirectory("src/cpp/list_node_cpp")
 add_subdirectory("src/cpp/add_two_numbers_cpp")
 add_subdirectory("src/cpp/binary_search_cpp")
+add_subdirectory("src/cpp/find_the_duplicate_number")
 add_subdirectory("src/cpp/integer_to_roman_cpp")
 add_subdirectory("src/cpp/letter_combinations_numbers_cpp")
 add_subdirectory("src/cpp/longest_no_repeat_cpp")
