--- a/.github/workflows/build-cpp.yml
+++ b/.github/workflows/build-cpp.yml
@@ -30,7 +30,7 @@ jobs:
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         run: |
-          cmake -B build
+          cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
 
       - name: Compile the project
         working-directory: ${{github.workspace}}
