--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_subdirectory("src/cpp/pairs_spells_potions_cpp")
 add_subdirectory("src/cpp/remove_nth_node_cpp")
 add_subdirectory("src/cpp/reverse_integer_cpp")
 add_subdirectory("src/cpp/reverse_linked_list_cpp")
+add_subdirectory("src/cpp/reverse_linked_list_ii_cpp")
 add_subdirectory("src/cpp/roman_to_integer_cpp")
 add_subdirectory("src/cpp/two_sum_cpp")
 add_subdirectory("src/cpp/valid_parentheses_cpp")
