Implementing evaluate reverse polish notation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ add_subdirectory("src/cpp/list_node_cpp")
 add_subdirectory("src/cpp/add_two_numbers_cpp")
 add_subdirectory("src/cpp/binary_search_cpp")
 add_subdirectory("src/cpp/container_with_most_water")
+add_subdirectory("src/cpp/evaluate_reverse_polish_notation")
 add_subdirectory("src/cpp/find_the_duplicate_number")
 add_subdirectory("src/cpp/generate_parentheses")
 add_subdirectory("src/cpp/integer_to_roman_cpp")
