--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,28 +1,43 @@
 version: 2
 updates:
-- package-ecosystem: github-actions
-  directory: "/"
-  schedule:
-    interval: daily
-    time: '00:00'
-    timezone: US/Central
-  allow:
-    # Allow both direct and indirect updates for all packages
-    - dependency-type: "all"
-  target-branch: "main"
-  open-pull-requests-limit: 99
-- package-ecosystem: cargo
-  directory: "/"
-  schedule:
-    interval: daily
-    time: '00:00'
-    timezone: US/Central
-  ignore:
-    # These are peer deps of Cargo and should not be automatically bumped
-    - dependency-name: "semver"
-    - dependency-name: "crates-io"
-  allow:
-    # Allow both direct and indirect updates for all packages
-    - dependency-type: "all"
-  target-branch: "main"
-  open-pull-requests-limit: 99
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: daily
+      time: '00:00'
+      timezone: US/Central
+    allow:
+      # Allow both direct and indirect updates for all packages
+      - dependency-type: "all"
+    target-branch: "main"
+    open-pull-requests-limit: 99
+  - package-ecosystem: nuget
+    directory: "/"
+    schedule:
+      interval: daily
+      time: '00:00'
+      timezone: US/Central
+    allow:
+      # Allow both direct and indirect updates for all packages
+      - dependency-type: "all"
+    target-branch: "main"
+    open-pull-requests-limit: 99
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"  
+  - package-ecosystem: cargo
+    directory: "/"
+    schedule:
+      interval: daily
+      time: '00:00'
+      timezone: US/Central
+    ignore:
+      # These are peer deps of Cargo and should not be automatically bumped
+      - dependency-name: "semver"
+      - dependency-name: "crates-io"
+    allow:
+      # Allow both direct and indirect updates for all packages
+      - dependency-type: "all"
+    target-branch: "main"
+    open-pull-requests-limit: 99
