--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_subdirectory("src/cpp/letter_combinations_numbers_cpp")
 add_subdirectory("src/cpp/longest_no_repeat_cpp")
 add_subdirectory("src/cpp/multiply_strings")
 add_subdirectory("src/cpp/pairs_spells_potions_cpp")
+add_subdirectory("src/cpp/peeking_iterator_cpp")
 add_subdirectory("src/cpp/remove_nth_node_cpp")
 add_subdirectory("src/cpp/reverse_integer_cpp")
 add_subdirectory("src/cpp/reverse_linked_list_cpp")
